// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders Hero 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Hero"
    >
      <div
        class="Header"
      >
        <svg
          title="Marvel - Search heroes"
        >
          logo.svg
        </svg>
        <h2
          class="Header-title"
        >
          EXPLORE O UNIVERSO
        </h2>
        <h3
          class="Header-subtitle"
        >
          Mergulhe no domínio deslumbrante de todos os personagens clássicos que você ama - e aqueles que você descobrirá em breve!
        </h3>
      </div>
      <div
        class="Search"
      >
        <form
          class="Search-form"
        >
          <div
            class="Search-inputGroup"
          >
            <label
              class="Search-label"
              for=""
            >
              <button
                class="Search-inputButton"
              >
                <svg
                  class="Search-inputIcon"
                >
                  search.svg
                </svg>
              </button>
              <input
                class="Search-input"
                placeholder="Procure por heróis"
              />
            </label>
          </div>
        </form>
      </div>
      <h1>
        Black Queen
      </h1>
      <p />
      <img
        alt="Black Queen"
        src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available/detail.jpg"
      />
      <p>
        Quadrinhos 2
      </p>
      <p>
        Últimos lançamentos
      </p>
      <div>
        <p>
          Captain America (1968) #369
        </p>
      </div>
      <div>
        <p>
          X-Men Unlimited (1993) #33
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App renders Home 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Home"
    >
      <div
        class="Header"
      >
        <svg
          title="Marvel - Search heroes"
        >
          logo.svg
        </svg>
        <h2
          class="Header-title"
        >
          EXPLORE O UNIVERSO
        </h2>
        <h3
          class="Header-subtitle"
        >
          Mergulhe no domínio deslumbrante de todos os personagens clássicos que você ama - e aqueles que você descobrirá em breve!
        </h3>
      </div>
      <div
        class="Search"
      >
        <form
          class="Search-form"
        >
          <div
            class="Search-inputGroup"
          >
            <label
              class="Search-label"
              for=""
            >
              <button
                class="Search-inputButton"
              >
                <svg
                  class="Search-inputIcon"
                >
                  search.svg
                </svg>
              </button>
              <input
                class="Search-input"
                placeholder="Procure por heróis"
              />
            </label>
          </div>
        </form>
      </div>
      <div
        class="HeroesList"
      >
        <div
          class="HeroesList-options"
        >
          <button>
            Ordenar por nome - A/Z
          </button>
        </div>
        <div
          class="HeroesList-cards"
        >
          <div
            class="HeroCard"
          >
            <img
              alt="Hulk"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/5/a0/538615ca33ab0.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Hulk
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Mercury"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Mercury
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Nicolaos"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Nicolaos
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="The Executioner"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/e/d0/4ce5a2ab860be.jpg"
            />
            <p
              class="HeroCard-name"
            >
              The Executioner
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Champions"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/8/b0/4c00376da82bb.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Champions
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Jack Murdock"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Jack Murdock
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Janus, the Nega-Man"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Janus, the Nega-Man
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Mordo"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Mordo
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Mysterio (Francis Klum)"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Mysterio (Francis Klum)
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Sabretooth (House of M)"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/5/80/4c0033dd26d33.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Sabretooth (House of M)
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Lady Mastermind"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/5/d0/4c00326f63d4c.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Lady Mastermind
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Living Mummy"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Living Mummy
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Living Tribunal"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/2/a0/4c0031062f91f.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Living Tribunal
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Scorpion (Ultimate)"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Scorpion (Ultimate)
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Omega the Unknown"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/f/10/4ce5a4e4cd15d.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Omega the Unknown
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Infant Terrible"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/2/f0/4c002f7854e02.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Infant Terrible
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Crimson King"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Crimson King
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Captain Cross"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Captain Cross
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="War Machine (Ultimate)"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/9/a0/4ce5a5647d38b.jpg"
            />
            <p
              class="HeroCard-name"
            >
              War Machine (Ultimate)
            </p>
          </div>
          <div
            class="HeroCard"
          >
            <img
              alt="Patch"
              class="HeroCard-img"
              src="http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg"
            />
            <p
              class="HeroCard-name"
            >
              Patch
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
